<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/btn1"
        android:tag = "@string/btn1"
        android:text="1"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#990000"
        android:onClick="popupToast"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:layout_margin="10dp"
        android:id="@+id/btn2"
        android:tag = "@string/btn2"
        android:text="2"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#ff6600"
        android:onClick="popupToast"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_toRightOf="@+id/btn2"
        android:layout_toEndOf="@+id/btn2"
        android:layout_margin="10dp"
        android:id="@+id/btn3"
        android:tag = "@string/btn3"
        android:text="3"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#ffff00"
        android:onClick="popupToast"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:layout_margin="10dp"
        android:id="@+id/btn4"
        android:tag = "@string/btn4"
        android:text="4"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#99cc00"
        android:onClick="popupToast"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4"
        android:layout_toRightOf="@+id/btn2"
        android:layout_toEndOf="@+id/btn2"
        android:layout_margin="10dp"
        android:id="@+id/btn5"
        android:tag = "@string/btn5"
        android:text="5"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#008800"
        android:onClick="popupToast"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_toRightOf="@+id/btn1"
        android:layout_toEndOf="@+id/btn1"
        android:layout_margin="10dp"
        android:id="@+id/btn6"
        android:tag = "@string/btn6"
        android:text="6"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#006699"
        android:onClick="popupToast"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/btn7"
        android:tag = "@string/btn7"
        android:text="7"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#967AB5"
        android:onClick="popupToast"
        />

</RelativeLayout>
